# chess-engine-analysis-platform

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
engine/: CMakeLists.txt
engine/include/: bitboards.h  board.h  evaluate.h  movegen.h  search.h  types.h  uci.h  zobrist.h
engine/src/: bitboards.cpp  board.cpp  evaluate.cpp  main.cpp  movegen.cpp  search.cpp  uci.cpp  zobrist.cpp
engine/tests/: perft_positions.txt
nn/: export_nnue.py  requirements.txt  train.py
server/: requirements.txt
server/app/: main.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/Common/: WebSocketStatus.tsx
web/src/components/Layout/: Header.tsx  Sidebar.tsx
web/src/pages/: AboutPage.tsx  AnalysisPage.tsx  GameAnalysisPage.tsx  HomePage.tsx  SettingsPage.tsx
web/src/services/: api.ts
web/src/store/: appStore.ts
